# snowid

./: .flake8  .gitignore  Makefile  README.md  download_sdl2_dlls.py  generate_stubs.py  generate_typings.py  mypy.ini  pyproject.toml  requirements.txt
project/: context.py  font.py  game.py  main.py  scenes.py  settings.py  shell.py
project/gamepart/: __init__.py  chunk.py  context.py  control.py  event.py  font_manager.py  game.py  noise.py  protocol.py  render.py  scene.py  subsystem.py  time.py  utils.py
project/gamepart/gui/: __init__.py  button.py  console.py  guiobject.py  image.py  panel.py  paragraph.py  system.py  text.py  textinput.py
project/gamepart/physics/: __init__.py  category.py  collide.py  object.py  physicalobject.py  specific.py  utils.py  vector.py  world.py
project/gamepart/viewport/: __init__.py  graphicalobject.py  viewport.py
project/scenes/: __init__.py  balls.py  base.py  main_menu.py  settings.py  test.py
project/scenes/balls/: __init__.py  ball.py  category.py  chunk.py  line.py  player.py  scene.py  ui.py
project/scenes/miner/: __init__.py  chunk.py  miner_entity.py  patch.py  scene.py  ui.py
project/tests/: __init__.py  conftest.py  test_category.py  test_chunk.py  test_console.py  test_event.py  test_noise.py  test_subsystem.py  test_time.py  test_typings.py  test_vector.py  test_viewport.py
project/tests/integration/: __init__.py  test_game_scenes.py  test_physicalobject.py  test_physics_utils.py  test_render.py  test_user_event.py  test_utils.py  test_world.py
project/tests/unit/: __init__.py  test_button.py  test_category.py  test_console.py  test_context.py  test_control.py  test_event.py  test_image.py  test_miner_chunk.py  test_miner_patch.py  test_noise.py  test_panel.py  test_paragraph.py  test_protocol.py  test_settings.py  test_subsystem.py  test_text.py  test_textinput.py  test_time.py  test_vector.py  test_viewport.py
