[project]
name = "snowid"
version = "0.0.1"
description = "Simple 2D game engine built on top of PySDL2"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "PySDL2",
    "IPython",
    "pymunk",
]

[project.optional-dependencies]
dev = [
    "black",
    "ruff",
    "mypy",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["project"]

[tool.black]
line-length = 88
target-version = ["py311"]

[tool.mypy]
python_version = "3.11"
show_column_numbers = true

[[tool.mypy.overrides]]
module = [
    "sdl2.*",
    "pymunk.*",
    "IPython.*",
]
ignore_missing_imports = true

[tool.ruff]
line-length = 88
target-version = "py311"
exclude = ["project/font.py"]  # Contains binary data

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP"]
# Ruff is compatible with black by default, no need to ignore W503

[tool.ruff.lint.isort]
known-first-party = ["project"]


